# webapp_recipe_analysis

./: .gitignore  Analyse NOM A REMPLACER.ipynb  Dockerfile  README.md  Schéma idée app.xmind  analyse.ipynb  app.py  app_manager.py  base clean.ipynb  class_app.py  pyproject.toml  requirements.txt  test_alfred.py  test_lidao.py  test_martial.txt  test_robin.py
.github/workflows/: ci.yml
app/: app_streamlit.py  app_v1.py  division.py  print_robin.py
src/DataPreprocess/: data_cleaning.py  data_preprocessor.py  feat_engineering.py  normalizer.py  run_preprocessing.py  vectorizer_preparator.py
src/FindingCloseRecipes/: config.py  distances.py  recipe_finder.py  run_recipe_finder.py  vectorizers.py
tests/: test_division.py
