[tool.poetry]
name = "webapp-recipe-analysis"
version = "0.1.0"
description = "Webapp for recipe analysis of Mangetamain company"
authors = ["Robin Guiavarch <robin.guiavarch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
